<resources>
    <!-- Application name -->
    <string name="app_name">TP2</string>


    <!-- Welcome message -->
    <string name="welcome_message">Welcome to our application!</string>

    <!-- Login / Password -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_error">Incorrect username or password</string>

    <!-- Connection state -->
    <string name="loading">Loading</string>
    <string name="logout">Log Out</string>

    <!-- Errors -->
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_generic">An error occurred. Please try again.</string>

    <!-- UI Text -->
    <string name="home_title">Home Page</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <!-- Other useful strings -->
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="back_button">Back</string>

    <!-- Messages and information -->
    <string name="hello_user">Hello, %1$s!</string>
    <string name="goodbye">Goodbye!</string>
</resources>
