<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Conteneur principal -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Titre principal -->
        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/welcome_message"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <!-- Identifiant -->
        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Entrez votre nom"
            android:inputType="text"
            android:autofillHints="username" />

        <!-- Mot de passe -->
        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Entrez votre mot de passe"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <!-- Bouton de connexion -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/login_button"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ort_world_logo"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
